@@ -15,7 +15,6 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -23,73 +22,52 @@ public class SharePlannerService {
 
     private final ProjectParticipantRepository projectParticipantRepository;
     private final FreeTimeCalendarRepository freeTimeCalendarRepository;
-    private final PlannerProjectRepository plannerProjectRepository;
-    private final PlannerSessionRepository plannerSessionRepository;
     private final PtSessionRepository ptSessionRepository;
+    private final PlannerSessionRepository plannerSessionRepository;
+    private final PlannerProjectRepository plannerProjectRepository;
 
-    // ------------------------
-    // 기존 PT 전용 메서드
-    // ------------------------
     public SharedPlannerResponseDTO getSharedPlanner(Long plannerId) {
+
         Long projectId = plannerSessionRepository.findById(plannerId)
                 .orElseThrow(() -> new EntityNotFoundException("세션을 찾을 수 없습니다."))
                 .getProject()
                 .getProjectId();
 
         PtSession ptSession = ptSessionRepository.findById(plannerId).orElseThrow();
+
         LocalDate startDate = ptSession.getStartWeekDay();
         LocalDate endDate = ptSession.getEndWeekDay();
 
+        // 1. ACCEPTED 참여자 조회
         List<ProjectParticipant> participants = projectParticipantRepository.findByProject_ProjectIdAndResponse(
                 projectId, ProjectParticipant.Response.ACCEPTED);
-        List<Long> userIds = participants.stream().map(p -> p.getUser().getId()).toList();
+        List<Long> userIds = participants.stream()
+                .map(p -> p.getUser().getId())
+                .collect(Collectors.toList());
 
         if (userIds.isEmpty()) {
-            return new SharedPlannerResponseDTO(startDate + " ~ " + endDate, Collections.emptyList());
+            return new SharedPlannerResponseDTO(
+                    startDate + " ~ " + endDate,
+                    Collections.emptyList()
+//                    Collections.emptyList()
+            );
         }
 
+        // 2. 참여자 프리캘린더 조회
         List<FreeTimeCalendar> freeTimes = freeTimeCalendarRepository.findByUserIdInAndAvailableDateBetween(
                 userIds, startDate, endDate);
 
-        return calculatePTIntervals(startDate, endDate, userIds, freeTimes);
-    }
-
-    @Transactional
-    public PlannerSession updateSelectTime(Long plannerId, SelectTimeRequestDTO dto) {
-        PtSession session = ptSessionRepository.findById(plannerId)
-                .orElseThrow(() -> new IllegalArgumentException("Invalid plannerId: " + plannerId));
-
-        LocalDate date = LocalDate.parse(dto.getDate());
-        LocalTime startTime = null;
-        LocalTime endTime = null;
-
-        if (Boolean.TRUE.equals(dto.getAllDay())) {
-            startTime = LocalTime.of(0, 0);
-            endTime = LocalTime.of(23, 59);
-        } else {
-            if (dto.getStart() != null) startTime = LocalTime.parse(dto.getStart());
-            if (dto.getEnd() != null) endTime = LocalTime.parse(dto.getEnd());
-        }
-
-        session.setDate(date);
-        session.setStartTime(startTime);
-        session.setEndTime(endTime);
-        session.setIsFinalized(true);
-
-        return ptSessionRepository.save(session);
-    }
-
-    // PT 교집합 계산 내부 메서드
-    private SharedPlannerResponseDTO calculatePTIntervals(LocalDate startDate, LocalDate endDate,
-                                                          List<Long> userIds, List<FreeTimeCalendar> freeTimes) {
+        // 3. 날짜별로 그룹핑
         Map<LocalDate, List<FreeTimeCalendar>> freeTimesByDate = freeTimes.stream()
                 .collect(Collectors.groupingBy(FreeTimeCalendar::getAvailableDate));
 
         List<FreeTimeIntervalDTO> allList = new ArrayList<>();
+//        List<FreeTimeIntervalDTO> notOneList = new ArrayList<>();
 
         for (LocalDate date = startDate; !date.isAfter(endDate); date = date.plusDays(1)) {
             List<FreeTimeCalendar> dayFreeTimes = freeTimesByDate.getOrDefault(date, Collections.emptyList());
 
+            // userId -> List<Interval>
             Map<Long, List<Interval>> userIntervals = new HashMap<>();
             for (FreeTimeCalendar ft : dayFreeTimes) {
                 Interval interval;
@@ -105,20 +83,35 @@ public class SharePlannerService {
             }
 
             int totalParticipants = userIds.size();
+
+            // 모두 겹치는 구간
             List<Interval> allOverlap = intersectAll(userIntervals, totalParticipants);
+
+            // 한명 뺀 나머지 겹치는 구간
+//            List<Interval> notOneOverlap = intersectNotOne(userIntervals);
+//
             allList.addAll(intervalsToDTO(date, allOverlap));
+//            notOneList.addAll(intervalsToDTO(date, notOneOverlap));
         }
 
-        return new SharedPlannerResponseDTO(startDate + " ~ " + endDate, allList);
+        return new SharedPlannerResponseDTO(
+                startDate + " ~ " + endDate,
+                allList
+//                notOneList
+        );
     }
 
+    // 모든 참여자의 interval 리스트 교집합 계산
     private List<Interval> intersectAll(Map<Long, List<Interval>> userIntervals, int totalParticipants) {
         if (userIntervals.size() < totalParticipants) {
+            // 여유시간 없는 참여자 존재 → 교집합 없음
             return Collections.emptyList();
         }
 
+        // 시작값으로 첫 참여자 interval 복사
         List<Interval> intersected = new ArrayList<>(userIntervals.values().iterator().next());
 
+        // 모든 참여자의 interval 교집합 계산
         for (List<Interval> intervals : userIntervals.values()) {
             intersected = intersectIntervalLists(intersected, intervals);
             if (intersected.isEmpty()) break;
@@ -126,6 +119,33 @@ public class SharePlannerService {
         return intersected;
     }
 
+    // n명 중 한 명 제외 후 나머지 모두의 교집합 (각 멤버 제외하고 교집합 구해서 모두 합침)
+    private List<Interval> intersectNotOne(Map<Long, List<Interval>> userIntervals) {
+        List<Interval> result = new ArrayList<>();
+        List<Long> users = new ArrayList<>(userIntervals.keySet());
+
+        for (int i = 0; i < users.size(); i++) {
+            Long excludedUser = users.get(i);
+
+            // 제외한 나머지 참여자들의 intervals만 추림
+            Map<Long, List<Interval>> subMap = new HashMap<>(userIntervals);
+            subMap.remove(excludedUser);
+
+            if (subMap.isEmpty()) continue;
+
+            // 교집합 계산
+            List<Interval> intersected = new ArrayList<>(subMap.values().iterator().next());
+            for (List<Interval> intervals : subMap.values()) {
+                intersected = intersectIntervalLists(intersected, intervals);
+                if (intersected.isEmpty()) break;
+            }
+            result = unionIntervals(result, intersected);
+        }
+
+        return result;
+    }
+
+    // 두 interval 리스트의 교집합 계산
     private List<Interval> intersectIntervalLists(List<Interval> list1, List<Interval> list2) {
         List<Interval> result = new ArrayList<>();
         int i = 0, j = 0;
@@ -151,11 +171,37 @@ public class SharePlannerService {
         return result;
     }
 
+    // 두 interval 리스트의 합집합 계산 (중첩 구간 합침)
+    private List<Interval> unionIntervals(List<Interval> list1, List<Interval> list2) {
+        List<Interval> combined = new ArrayList<>();
+        combined.addAll(list1);
+        combined.addAll(list2);
+        if (combined.isEmpty()) return combined;
+
+        combined.sort(Comparator.comparing(Interval::getStart));
+        List<Interval> merged = new ArrayList<>();
+        Interval prev = combined.get(0);
+
+        for (int i = 1; i < combined.size(); i++) {
+            Interval curr = combined.get(i);
+            if (!prev.getEnd().isBefore(curr.getStart())) {
+                // 겹치는 구간 병합
+                prev = new Interval(prev.getStart(), prev.getEnd().isAfter(curr.getEnd()) ? prev.getEnd() : curr.getEnd());
+            } else {
+                merged.add(prev);
+                prev = curr;
+            }
+        }
+        merged.add(prev);
+        return merged;
+    }
+
     private List<FreeTimeIntervalDTO> intervalsToDTO(LocalDate date, List<Interval> intervals) {
         if (intervals.isEmpty()) return Collections.emptyList();
 
         List<FreeTimeIntervalDTO> dtos = new ArrayList<>();
         for (Interval interval : intervals) {
+            // 00:00 ~ 23:59:59 인 경우 allDay 처리
             if (interval.getStart().equals(LocalTime.MIN) && interval.getEnd().equals(LocalTime.MAX)) {
                 dtos.add(FreeTimeIntervalDTO.ofAllDay(date));
             } else {
@@ -165,9 +211,125 @@ public class SharePlannerService {
         return dtos;
     }
 
-    // ------------------------
-    // 여행 프로젝트 전용 메서드
-    // ------------------------
+    @Transactional
+    public PlannerSession updateSelectTime(Long plannerId, SelectTimeRequestDTO dto) {
+        // 1. 기존 세션 찾기
+        PtSession session = ptSessionRepository.findById(plannerId)
+                .orElseThrow(() -> new IllegalArgumentException("Invalid plannerId: " + plannerId));
+
+        // 2. 날짜/시간 파싱
+        LocalDate date = LocalDate.parse(dto.getDate());
+        LocalTime startTime;
+        LocalTime endTime;
+
+        if (Boolean.TRUE.equals(dto.getAllDay())) {
+            startTime = LocalTime.of(0, 0);
+            endTime = LocalTime.of(23, 59);
+        } else {
+            startTime = dto.getStart() != null ? LocalTime.parse(dto.getStart()) : null;
+            endTime = dto.getEnd() != null ? LocalTime.parse(dto.getEnd()) : null;
+        }
+
+        // 3. 세션 값 업데이트
+        session.setDate(date);
+        session.setStartTime(startTime);
+        session.setEndTime(endTime);
+        session.setIsFinalized(true);
+
+        // 4. 프로젝트 참가자 FreeTimeCalendar 조정
+        PlannerProject project = session.getProject();
+        for (ProjectParticipant participant : project.getParticipants()) {
+            User user = participant.getUser();
+            List<FreeTimeCalendar> freeTimes = freeTimeCalendarRepository.findByUserAndAvailableDate(user, date);
+
+            for (FreeTimeCalendar freeTime : freeTimes) {
+                // null-safe 처리
+                int startHour = Optional.ofNullable(freeTime.getAvailableStartHour()).orElse(0);
+                int startMin = Optional.ofNullable(freeTime.getAvailableStartMin()).orElse(0);
+                int endHour = Optional.ofNullable(freeTime.getAvailableEndHour()).orElse(23);
+                int endMin = Optional.ofNullable(freeTime.getAvailableEndMin()).orElse(59);
+
+                LocalTime freeStart = LocalTime.of(startHour, startMin);
+                LocalTime freeEnd = LocalTime.of(endHour, endMin);
+
+                // 겹치는 경우만 처리
+                if (!freeEnd.isBefore(startTime) && !freeStart.isAfter(endTime)) {
+
+                    // (1) 완전히 덮힘 → 삭제
+                    if (!freeStart.isBefore(startTime) && !freeEnd.isAfter(endTime)) {
+                        freeTimeCalendarRepository.delete(freeTime);
+                    }
+
+                    // (2) 앞/뒤 모두 남음 → 분할
+                    else if (freeStart.isBefore(startTime) && freeEnd.isAfter(endTime)) {
+                        // 앞쪽 수정 (0:00 시작 보장)
+                        freeTime.setAvailableStartHour(0);
+                        freeTime.setAvailableStartMin(0);
+                        freeTime.setAvailableEndHour(startTime.getHour());
+                        freeTime.setAvailableEndMin(startTime.getMinute());
+                        freeTime.setAllDay(false);
+                        freeTimeCalendarRepository.save(freeTime);
+
+                        // 뒤쪽 새 객체 추가
+                        FreeTimeCalendar newFreeTime = FreeTimeCalendar.builder()
+                                .user(user)
+                                .availableDate(date)
+                                .allDay(false)
+                                .availableStartHour(endTime.getHour())
+                                .availableStartMin(endTime.getMinute())
+                                .availableEndHour(freeEnd.getHour())
+                                .availableEndMin(freeEnd.getMinute())
+                                .build();
+                        freeTimeCalendarRepository.save(newFreeTime);
+                    }
+
+                    // (3) 앞쪽만 남음 → 끝 시간 줄임
+                    else if (freeStart.isBefore(startTime)) {
+                        freeTime.setAvailableStartHour(0);
+                        freeTime.setAvailableStartMin(0);
+                        freeTime.setAvailableEndHour(startTime.getHour());
+                        freeTime.setAvailableEndMin(startTime.getMinute());
+                        freeTime.setAllDay(false);
+                        freeTimeCalendarRepository.save(freeTime);
+                    }
+
+                    // (4) 뒤쪽만 남음 → 시작 시간 당김
+                    else if (freeEnd.isAfter(endTime)) {
+                        freeTime.setAvailableStartHour(endTime.getHour());
+                        freeTime.setAvailableStartMin(endTime.getMinute());
+                        freeTime.setAvailableEndHour(freeEnd.getHour());
+                        freeTime.setAvailableEndMin(freeEnd.getMinute());
+                        freeTime.setAllDay(false);
+                        freeTimeCalendarRepository.save(freeTime);
+                    }
+                }
+            }
+        }
+
+        // 5. 프로젝트 startDate / endDate 재계산
+        List<PtSession> allSessions = ptSessionRepository.findByProject(project);
+
+        LocalDate minDate = allSessions.stream()
+                .filter(PtSession::getIsFinalized)
+                .map(PtSession::getDate)
+                .min(LocalDate::compareTo)
+                .orElse(null);
+
+        LocalDate maxDate = allSessions.stream()
+                .filter(PtSession::getIsFinalized)
+                .map(PtSession::getDate)
+                .max(LocalDate::compareTo)
+                .orElse(null);
+
+        project.setStartDate(minDate);
+        project.setEndDate(maxDate);
+        plannerProjectRepository.save(project);
+
+        // 6. 세션 저장 후 반환
+        return ptSessionRepository.save(session);
+    }
+
+    // 여행 프로젝트 메서드
     @Transactional(readOnly = true)
     public SharedPlannerResponseDTO getTravelSharedCalendar(Long projectId, LocalDate startDate, LocalDate endDate) {
         List<ProjectParticipant> participants = projectParticipantRepository
